# umlextensions

./: .gitignore  .mypi.ini  .travis.yml  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: python-publish.yml
developer/: Generate Python Plugin LexerParserVisitor.md
src/umlextensions/: AdapterTypes.py  BaseExtension.py  Common.py  ErrorFormatter.py  ExtensionManager.py  ExtensionPreferences.py  ExtensionsFacade.py  ExtensionsManager.py  ExtensionsPreferences.py  ExtensionsPubSub.py  ExtensionsTypes.py  IExtensionAdapter.py  IExtensionsFacade.py
src/umlextensions/extensiontypes/: BaseExtension.py  ExtensionDataTypes.py  SingleFileRequestResponse.py
src/umlextensions/input/: BaseInputExtension.py  InputPython.py
src/umlextensions/input/python/: DlgSelectMultiplePackages.py  DlgShapeLayoutParameters.py  PythonToUmlShapes.py
src/umlextensions/output/: BaseOutputExtension.py  OutputFormat.py  OutputGML.py
src/umlextensions/output/gml/: GMLExporter.py
src/umlextensions/resources/: loggingConfiguration.json
src/umlextensions/tools/: BaseToolExtension.py  ToolDiagramArranger.py  ToolForceDirectedLayout.py  ToolOrthogonalLayout.py  ToolOrthogonalRouting.py  ToolSugiyama.py
src/umlextensions/tools/diagramarranger/: ArrangerType.py  ForceDirectedMethod.py  LayoutAlgorithms.py
src/umlextensions/tools/forcedirectedlayout/: ConfigurationPanel.py  DlgConfiguration.py  UmlShapeNode.py
src/umlextensions/tools/orthogonallayout/: DlgLayoutDimensions.py  OrthogonalAdapter.py  (+1 more)
tests/: AppTestDialogs.py  MockGenerator.py  ProjectTestBase.py  uvtest.py
tests/extensiondemo/: DlgUmlDiagramArrangerPreferences.py  ExtensionDemoApp.py  ExtensionFrame.py  ExtensionTestApp.py  ExtensionsFacade.py
tests/resources/: testLoggingConfiguration.json
(+54 files in other folders)
