[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name='umlextensions'
dynamic = ["version"]
description = 'Plugins for umldiagrammer'
readme = "README.md"
authors = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
keywords = ['umldiagrammer,graphical,uml shapes,python']
license  = 'AGPL-1.0-or-later'

classifiers = [
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    'wxPython>=4.2.4',
    'codeallybasic>=1.30.1',
    'codeallyadvanced>=2.3.0',
    'umlmodel>=3.4.1',
    'umlshapes>=2.3.1',
    'umlio>=0.7.1',
    'antlr4-python3-runtime==4.13.2',
    'Pypubsub==4.0.7',
    'networkx>=3.6.1',
    'numpy>=2.4.4',
    'scipy>=1.17.1',
    'pyorthogonalrouting>=2.0.1',
    'orthogonal>=1.3.3',
    'pyforcedirectedlayout>=2.0.0',
]

[project.optional-dependencies]

test = [
  'mypy==1.20.2',
  'mypy-extensions==1.1.0',
  'html-testRunner~=1.2.1',
]

deploy = [
    "wheel==0.47.0",
    "setuptools==82.0.1",
    "twine==6.2.0",
    "build==1.5.0",
    'pkginfo==1.12.1.2'
]

[project.urls]
Repository = 'https://github.com/hasii2011/umlextensions'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
'umlextensions.resources' = ['loggingConfiguration.json']

[tool.setuptools.dynamic]
version = {attr = 'umlextensions.__version__'}

[project.scripts]

pyfabricate = "umlextensions.MainClass:commandHandler"
